--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
     "react": "^15.3.2",
+    "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
+    "react-form": "0.0.2",
+    "react-form-inputs": "0.0.1",
     "react-redux": "^4.4.6",
     "redux": "^3.6.0",
     "serve-favicon": "~2.3.0"
@@ -22,6 +25,7 @@
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.7",
+    "babel-plugin-transform-class-properties": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
