--- a/package.json
+++ b/package.json
@@ -8,18 +8,22 @@
   "dependencies": {
     "babel-polyfill": "^6.16.0",
     "body-parser": "~1.15.2",
+    "brace": "^0.9.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
     "react": "^15.3.2",
+    "react-ace": "^4.0.0",
     "react-bootstrap": "^0.30.6",
     "react-dom": "^15.3.2",
     "react-form": "0.0.2",
     "react-form-inputs": "0.0.1",
     "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "request": "^2.78.0",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
