--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha --require babel-core/register jsapp/react-wizard/test"
   },
   "dependencies": {
     "babel-polyfill": "^6.16.0",
@@ -33,6 +34,8 @@
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "chai": "^3.5.0",
+    "mocha": "^3.1.2",
     "webpack": "^1.13.3"
   }
 }
