--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "debug": "~2.2.0",
     "express": "~4.14.0",
     "hbs": "~4.0.1",
+    "mongodb": "^2.2.11",
     "morgan": "~1.7.0",
+    "npm-zepto": "^1.1.7",
     "react": "^15.3.2",
     "react-ace": "^4.0.0",
     "react-bootstrap": "^0.30.6",
